--- a/head.html
+++ b/head.html
@@ -38,7 +38,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li id="Navigation_Startseite"><a href="/"><i class="fa fa-home"></i> Startseite</a></li>
+            <li id="Navigation_Startseite"><a href="/"><i class="fa fa-home"></i> <b>Startseite</b></a></li>
             <li id="Navigation_Portrait"><a href="/Portrait/"><b>Portrait</b></a></li>
             <li id="Navigation_Schulleben"><a href="/Schulleben/">Schulleben</a></li>
             <li id="Navigation_Ehemalige"><a href="/Ehemalige/">Ehemalige</a></li>
