--- a/head.html
+++ b/head.html
@@ -40,11 +40,11 @@
           <ul class="nav navbar-nav">
             <li id="Navigation_Startseite"><a href="/"><b><i class="fa fa-home"></i> Startseite</b></a></li>
             <li id="Navigation_Portrait"><a href="/Portrait/"><b>Portrait</b></a></li>
-            <li id="Navigation_Schulleben"><a href="/Schulleben/">Schulleben</a></li>
-            <li id="Navigation_Ehemalige"><a href="/Ehemalige/">Ehemalige</a></li>
-            <li id="Navigation_Galerie"><a href="/Galerie/"><i class="fa fa-film"></i> Galerie</a></li>
-            <li id="Navigation_SMV"><a href="/SMV/"><i class="fa fa-users"></i> SMV</a></li>
-            <li id="Navigation_Impressum"><a href="/Impressum/"><i class="fa fa-envelope"></i> Kontakt/Impressum</a></li>
+            <li id="Navigation_Schulleben"><a href="/Schulleben/"><b>Schulleben</b></a></li>
+            <li id="Navigation_Ehemalige"><a href="/Ehemalige/"><b>Ehemalige</b></a></li>
+            <li id="Navigation_Galerie"><a href="/Galerie/"><b><i class="fa fa-film"></i> Galerie</b></a></li>
+            <li id="Navigation_SMV"><a href="/SMV/"><b><i class="fa fa-users"></i> SMV</b></a></li>
+            <li id="Navigation_Impressum"><a href="/Impressum/"><b><i class="fa fa-envelope"></i> Kontakt/Impressum</b></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
