--- a/sidebar/Galerie.html
+++ b/sidebar/Galerie.html
@@ -1,3 +1,1 @@
-<li id="Vermischtes">
-  <a href="/Galerie/Vermischtes/">Vermischtes</a>
-</li>
+<a href="/Galerie/Vermischtes/" class="list-group-item">Vermischtes</a>
