--- a/head.html
+++ b/head.html
@@ -24,29 +24,84 @@
     </script>
     
   </head>
-  
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="sr-only">
+              Toggle navigation
+            </span>
+            <span class="icon-bar">
+            </span>
+            <span class="icon-bar">
+            </span>
+            <span class="icon-bar">
+            </span>
           </button>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li id="Navigation_Startseite"><a href="/"><b><i class="fa fa-home"></i> Startseite</b></a></li>
-            <li id="Navigation_Portrait"><a href="/Portrait/"><b>Portrait</b></a></li>
-            <li id="Navigation_Schulleben"><a href="/Schulleben/"><b>Schulleben</b></a></li>
-            <li id="Navigation_Ehemalige"><a href="/Ehemalige/"><b>Ehemalige</b></a></li>
-            <li id="Navigation_Galerie"><a href="/Galerie/"><b><i class="fa fa-film"></i> Galerie</b></a></li>
-            <li id="Navigation_SMV"><a href="/SMV/"><b><i class="fa fa-users"></i> SMV</b></a></li>
-            <li id="Navigation_Impressum"><a href="/Impressum/"><b><i class="fa fa-envelope"></i> Kontakt/Impressum</b></a></li>
+            <li id="Navigation_Startseite">
+              <a href="/">
+                <b>
+                  <i class="fa fa-home">
+                  </i>
+                  Startseite
+                </b>
+              </a>
+            </li>
+            <li id="Navigation_Portrait">
+              <a href="/Portrait/">
+                <b>
+                  Portrait
+                </b>
+              </a>
+            </li>
+            <li id="Navigation_Schulleben">
+              <a href="/Schulleben/">
+                <b>
+                  Schulleben
+                </b>
+              </a>
+            </li>
+            <li id="Navigation_Ehemalige">
+              <a href="/Ehemalige/">
+                <b>
+                  Ehemalige
+                </b>
+              </a>
+            </li>
+            <li id="Navigation_Galerie">
+              <a href="/Galerie/">
+                <b>
+                  <i class="fa fa-film">
+                  </i>
+                  Galerie
+                </b>
+              </a>
+            </li>
+            <li id="Navigation_SMV">
+              <a href="/SMV/">
+                <b>
+                  <i class="fa fa-users">
+                  </i>
+                  SMV
+                </b>
+              </a>
+            </li>
+            <li id="Navigation_Impressum">
+              <a href="/Impressum/">
+                <b>
+                  <i class="fa fa-envelope">
+                  </i>
+                  Kontakt/Impressum
+                </b>
+              </a>
+            </li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
+        <!--/.nav-collapse -->
       </div>
     </div>
     
