--- a/sidebar/Ehemalige.html
+++ b/sidebar/Ehemalige.html
@@ -1,6 +1,6 @@
-<li id="Ehemalige">
-  <a href="/Ehemalige/Ehemalige/">Ehemalige</a>
-</li>
-<li id="Verein">
-  <a href="/Ehemalige/Verein/">Verein</a>
-</li>
+<a href="/Ehemalige/Ehemalige/" class="list-group-item">
+  Ehemalige
+</a>
+<a href="/Ehemalige/Verein/" class="list-group-item">
+  Verein
+</a>
