--- a/sidebar/Impressum.html
+++ b/sidebar/Impressum.html
@@ -1,30 +1,18 @@
-<li id="Kontakt">
-  <a href="/Impressum/Kontakt/">
-    Kontakt
-  </a>
-</li>
-<li id="Impressum">
-  <a href="/Impressum/Impressum/">
-    Impressum
-  </a>
-</li>
-<li id="Anfahrt">
-  <a href="/Impressum/Anfahrt/">
-    Anfahrt
-  </a>
-</li>
-<li id="Routenplaner">
-  <a href="/Impressum/Routenplaner/">
-    Routenplaner
-  </a>
-</li>
-<li id="Unterrichtszeiten">
-  <a href="/Impressum/Unterrichtszeiten/">
-    Unterrichtszeiten
-  </a>
-</li>
-<li id="Statistiken">
-  <a href="/Impressum/Statistiken/">
-    Statistiken
-  </a>
-</li>
+<a href="/Impressum/Kontakt/" class="list-group-item" id="Kontakt">
+  Kontakt
+</a>
+<a href="/Impressum/Impressum/" class="list-group-item" id="Impressum">
+  Impressum
+</a>
+<a href="/Impressum/Anfahrt/" class="list-group-item" id="Anfahrt">
+  Anfahrt
+</a>
+<a href="/Impressum/Routenplaner/" class="list-group-item" id="Routenplaner">
+  Routenplaner
+</a>
+<a href="/Impressum/Unterrichtszeiten/" class="list-group-item" id="Unterrichtszeiten">
+  Unterrichtszeiten
+</a>
+<a href="/Impressum/Statistiken/" class="list-group-item" id="Statistiken">
+  Statistiken
+</a>
