--- a/footer.html
+++ b/footer.html
@@ -50,7 +50,7 @@
 </div>
 </div>
 <script type="text/javascript">
-  highlight("{{ page.title }}");
+  unternavigation("{{ page.title }}");
 </script>
 </body>
 </html>
