--- a/sidebar/Ehemalige.html
+++ b/sidebar/Ehemalige.html
@@ -1,6 +1,6 @@
-<a href="/Ehemalige/Ehemalige/" class="list-group-item">
+<a href="/Ehemalige/Ehemalige/" class="list-group-item" id="Ehemalige">
   Ehemalige
 </a>
-<a href="/Ehemalige/Verein/" class="list-group-item">
+<a href="/Ehemalige/Verein/" class="list-group-item" id="Verein">
   Verein
 </a>
