--- a/sidebar/Galerie.html
+++ b/sidebar/Galerie.html
@@ -1,1 +1,3 @@
-<a href="/Galerie/Vermischtes/" class="list-group-item">Vermischtes</a>
+<a href="/Galerie/Vermischtes/" class="list-group-item" id="Vermischtes">
+  Vermischtes
+</a>
