--- a/sidebar/Schulleben.html
+++ b/sidebar/Schulleben.html
@@ -1,4 +1,3 @@
-<li id="Aktuelles">
-  <a href="/Schulleben/Aktuelles/">Aktuelles</a>
-</li>
-
+<a href="/Schulleben/Aktuelles/" class="list-group-item" id="Aktuelles">
+  Aktuelles
+</a>
