--- a/sidebar/Portrait.html
+++ b/sidebar/Portrait.html
@@ -1,38 +1,24 @@
-<li id="Begruessung">
-  <a href="/Portrait/Begruessung/" id="Begruessung">
-    Begrüßung
-  </a>
-</li>
-<li id="Kollegium">
-  <a href="/Portrait/Kollegium/">
-    Kollegium
-  </a>
-</li>
-<li id="Selbstverstaendnis">
-  <a href="/Portrait/Selbstverstaendnis/">
-    Selbstverständnis
-  </a>
-</li>
-<li id="Unterrichtsprofil">
-  <a href="/Portrait/Unterrichtsprofil/">
-    Unterrichtsprofil
-  </a>
-</li>
-<li id="Fordern_und_Foerdern">
-  <a href="/Portrait/Fordern_und_Foerdern/">
-    Fordern und Fördern
-  </a>
-</li>
-<li id="Aktivitaeten">
-  <a href="/Portrait/Aktivitaeten/">
-    Aktivitäten
-  </a>
-</li>
-<li id="Nachmittagsbetreuung">
-  <a href="/Portrait/Nachmittagsbetreuung/">
-    Nachmittagsbetreuung
-  </a>
-</li>
+<a href="/Portrait/Begruessung/" class="list-group-item" id="Begruessung">
+  Begrüßung
+</a>
+<a href="/Portrait/Kollegium/" class="list-group-item" id="Kollegium">
+  Kollegium
+</a>
+<a href="/Portrait/Selbstverstaendnis/" class="list-group-item" id="Selbstverstaendnis">
+  Selbstverstaendnis
+</a>
+<a href="/Portrait/Unterrichtsprofil/" class="list-group-item" id="Unterrichtsprofil">
+  Unterrichtsprofil
+</a>
+<a href="/Portrait/Fordern_und-Foerdern/" class="list-group-item" id="Fordern_und-Foerdern">
+  Fordern und Fördern
+</a>
+<a href="/Portrait/Aktivitaeten/" class="list-group-item" id="Aktivitaeten">
+  Aktivitäten
+</a>
+<a href="/Portrait/Nachmittagsbetreuung/" class="list-group-item" id="Nachmittagsbetreuung">
+  Nachmittagsbetreuung
+</a>
 <li  id="Geschichte_des_FEG">
   <a href="/Portrait/Geschichte_des_FEG/">
     Geschichte des FEG
