--- a/sidebar/Portrait.html
+++ b/sidebar/Portrait.html
@@ -36,63 +36,6 @@
     </li>
   </ul>
 </li>
-<li id="FEG_Forum">
-  <a href="/Portrait/FEG_Forum/">
-    FEG-Forum
-  </a>
-</li>
-<li id="Schueleraustausch">
-  <a href="/Portrait/Schueleraustausch/">
-    Schüleraustausch
-  </a>
-</li>
-<li id="Stuetzpunktschule_NwT">
-  <a href="#/Portrait/Stuetzpunktschule_NwT/">
-    Stützpunktschule NwT
-  </a>
-</li>
-<li id="Schuelerfirma">
-  <a href="#/Portrait/Schuelerfirma/">
-    Schülerfirma
-  </a>
-</li>
-<li id="Streitschlichter">
-  <a href="#/Portrait/Streitschlichter/">
-    Streitschlichter
-  </a>
-</li>
-<li id="Grundschul_Kooperation">
-  <a href="#/Portrait/Grundschul_Kooperation/">
-    Grundschul-Kooperation
-  </a>
-</li>
-<li id="Methodentag">
-  <a href="#/Portrait/Methodentag/">
-    Methodentag
-  </a>
-</li>
-<li id="Info_für_Grundschuleltern">
-  <a href="#/Portrait/Info_für_Grundschuleltern/">
-    Info für Grundschuleltern
-  </a>
-</li>
-<li id="MINT_am_FEG">
-  <a href="#/Portrait/MINT_am_FEG/">
-    MINT am FEG
-  </a>
-</li>
-<li id="Orientierungspraktikum">
-  <a href="#/Portrait/Orientierungspraktikum/">
-    Orientierungspraktikum
-  </a>
-</li>
-<li id="Beratungslehrer">
-  <a href="#/Portrait/Beratungslehrer/">
-    Beratungslehrer
-  </a>
-</li>
-<li id="Schulsanitätsdienst">
-  <a href="#/Portrait/Schulsanitaetsdienst/">
-    Schulsanitätsdienst
-  </a>
-</li>
+<a href="/Portrait/FEG-Forum/" class="list-group-item" id="FEG-Forum">
+  FEG-Forum
+</a>
