--- a/sidebar/Portrait.html
+++ b/sidebar/Portrait.html
@@ -19,23 +19,9 @@
 <a href="/Portrait/Nachmittagsbetreuung/" class="list-group-item" id="Nachmittagsbetreuung">
   Nachmittagsbetreuung
 </a>
-<li  id="Geschichte_des_FEG">
-  <a href="/Portrait/Geschichte_des_FEG/">
-    Geschichte des FEG
-  </a>
-  <ul class="nav">
-    <li id="Geschichte_des_FEG/1">
-      <a href="/Portrait/Geschichte_des_FEG/1/">
-        Gerhard Schlecht
-      </a>
-    </li>
-    <li id="Geschichte_des_FEG/2">
-      <a href="/Portrait/Geschichte_des_FEG/2/">
-        Dr. Werner Abelein
-      </a>
-    </li>
-  </ul>
-</li>
+<a href="/Portrait/Geschichte-des-FEG/" class="list-group-item" id="Geschichte-des-FEG">
+  Geschichte-des-FEG
+</a>
 <a href="/Portrait/FEG-Forum/" class="list-group-item" id="FEG-Forum">
   FEG-Forum
 </a>
