--- a/sidebar/Portrait.html
+++ b/sidebar/Portrait.html
@@ -19,9 +19,9 @@
 <a href="/Portrait/Nachmittagsbetreuung/" class="list-group-item" id="Nachmittagsbetreuung">
   Nachmittagsbetreuung
 </a>
-<a href="/Portrait/Geschichte-des-FEG/" class="list-group-item" id="Geschichte-des-FEG">
-  Geschichte-des-FEG
+<a href="/Portrait/Geschichte_des_FEG/" class="list-group-item" id="Geschichte_des_FEG">
+  Geschichte des FEG
 </a>
-<a href="/Portrait/FEG-Forum/" class="list-group-item" id="FEG-Forum">
+<a href="/Portrait/FEG_Forum/" class="list-group-item" id="FEG_Forum">
   FEG-Forum
 </a>
