--- a/head.html
+++ b/head.html
@@ -29,7 +29,7 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-<i class="fa fa-th-list"></i>
+<i class="fa fa-th-list-o"></i>
           </button>
         </div>
         <div class="navbar-collapse collapse">
