--- a/head.html
+++ b/head.html
@@ -15,7 +15,8 @@
       FEG | Friedrich-Eugens-Gymnasium Stuttgart
     </title>
     
-    <link rel="stylesheet" type="text/Css" href="http://feg.cdnconnect.com/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="http://feg.cdnconnect.com/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="http://getbootstrap.com/examples/navbar/navbar.css"/>
     <link rel="shortcut icon" href="/favicon.ico"/>
     
     <script type="text/javascript">
