--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,9 @@
 | 
 <i class="fa fa-arrow-left">
 </i>
-
+<p>
+  &nbsp;
+</p>
 <a href="javascript:history.back()" onmouseover="{window.status='Zurück'; return true;}">
   zurück
 </a>
