--- a/head.html
+++ b/head.html
@@ -36,6 +36,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
+            <a class="navbar-brand" href="#"><img src="http://feg.cdnconnect.com/img/logo.gif"/></a>
           </div>
           <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
