--- a/head.html
+++ b/head.html
@@ -24,7 +24,7 @@
     </script>
     
   </head>
-  <body>
+  <body style="padding-top: 20px;">
     <div class="container">
       <div class="navbar navbar-inverse">
         <div class="container">
