--- a/head.html
+++ b/head.html
@@ -24,9 +24,9 @@
     </script>
     
   </head>
-  <body style="padding-top: 20px;">
+  <body>
     <div class="container">
-      <div class="navbar navbar-inverse">
+      <div class="navbar navbar-inverse" style="padding-top: 20px;">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
