--- a/head.html
+++ b/head.html
@@ -25,8 +25,8 @@
     
   </head>
   <body>
-    <div class="container">
-      <div class="navbar navbar-inverse" style="padding-top: 20px;">
+    <div class="container" style="padding-top: 20px;">
+      <div class="navbar navbar-inverse">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
