--- a/head.html
+++ b/head.html
@@ -25,7 +25,7 @@
     
   </head>
   <body>
-    <div class="container" style="padding-top: 20px;">
+    <div class="container">
       <div class="navbar navbar-inverse">
         <div class="container">
           <div class="navbar-header">
