--- a/footer.html
+++ b/footer.html
@@ -17,9 +17,12 @@
     </i>
     Auf Github anzeigen
   </a>
+  | 
+  <a href="https://github.com/feg-stuttgart/feg-stuttgart.github.io/blob/master/{{ page.path }}">
+    Datei anzeigen
+  </a>
   <p>
     &copy; Friedrich-Eugens-Gymnasium Stuttgart 2013
-    Path: {{ page.path }}
   </p>
 </div>
 </div>
@@ -41,7 +44,8 @@
     ›
   </a>
   <a class="close">
-    <i class="fa fa-times"></i>
+    <i class="fa fa-times">
+    </i>
   </a>
   <a class="play-pause">
   </a>
