--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,8 @@
   </a>
   | 
   <a href="https://github.com/feg-stuttgart/feg-stuttgart.github.io/blob/master/{{ page.path }}">
-    Datei anzeigen
+    <i class="fa fa-pencil-square-o"></i>
+    bearbeiten
   </a>
   <p>
     &copy; Friedrich-Eugens-Gymnasium Stuttgart 2013
