--- a/head.html
+++ b/head.html
@@ -101,7 +101,7 @@ padding-top: 0px;
               <li id="Navigation_Startseite">
                 <a href="/">
                   <b>
-                    <i class="fa fa-home">
+                    <i class="fa fa-home fa-fw">
                     </i>
                     Startseite
                   </b>
@@ -131,7 +131,7 @@ padding-top: 0px;
               <li id="Navigation_Galerie">
                 <a href="/Galerie/">
                   <b>
-                    <i class="fa fa-film">
+                    <i class="fa fa-film fa-fw">
                     </i>
                     Galerie
                   </b>
@@ -140,7 +140,7 @@ padding-top: 0px;
               <li id="Navigation_SMV">
                 <a href="/SMV/">
                   <b>
-                    <i class="fa fa-users">
+                    <i class="fa fa-users fa-fw">
                     </i>
                     SMV
                   </b>
@@ -149,7 +149,7 @@ padding-top: 0px;
               <li id="Navigation_Impressum">
                 <a href="/Impressum/">
                   <b>
-                    <i class="fa fa-envelope">
+                    <i class="fa fa-envelope fa-fw">
                     </i>
                     Kontakt/Impressum
                   </b>
