--- a/head.html
+++ b/head.html
@@ -18,9 +18,9 @@
     <link rel="shortcut icon" href="/favicon.ico"/>
     
     <script type="text/javascript">
-      LoadIndexJS();        //Basis-JS
-      LoadIndexCSS();	    //Basis-CSS
-      LoadFontAwesomeCSS(); //Icons
+      LoadJS("cdn", "index");        //Basis-JS
+      LoadCSS("cdn", "index");	    //Basis-CSS
+      LoadCSS("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/", "font-awesome.min"); //Icons
     </script>
     
   </head>
