--- a/head.html
+++ b/head.html
@@ -8,7 +8,50 @@
     
     <!-- Loader-JS -->
     <script type="text/javascript">
-      function LoadJS(a,b){if(a="cdn")var a="http://feg.cdnconnect.com/js/";var c=document.getElementsByTagName("script")[0],d=document.createElement("script");d.type="text/javascript",d.src=a+b+".js",d.async="async",c.parentNode.insertBefore(d,c)}function LoadCSS(a,b){if(a="cdn")var a="http://feg.cdnconnect.com/css/";var c=document.getElementsByTagName("link")[0],d=document.createElement("link");d.rel="stylesheet",d.type="text/css",d.href=a+b+".css",c.parentNode.insertBefore(d,c)}function highlight(a){var b=document.getElementById(a);b.className="active"}function unternavigation(a){var b=document.getElementById(a);b.className="list-group-item active"}function countdown(a,b){var c=new Date(b),d=new Date,c=c.getTime(),d=d.getTime(),e=c-d,f=Math.floor(e/864e5);document.write("Noch "+f+" Tag(e) bis zum "+a)}
+      function LoadJS(server, script){
+    if(server = "cdn"){
+        var server = 'http://feg.cdnconnect.com/js/';
+    }
+    var s = document.getElementsByTagName('script')[0],
+        p = document.createElement('script');
+    p.type = 'text/javascript';
+    p.src = server + script + ".js";
+    p.async = 'async';
+    s.parentNode.insertBefore(p, s);
+}
+function LoadCSS(server, stylesheet) {
+    if(server = "cdn"){
+        var server = 'http://feg.cdnconnect.com/css/';
+    }
+    if(server = "bootstrapcdn") {
+        var server = '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/';
+    }
+    var s = document.getElementsByTagName('link')[0],
+        p = document.createElement('link');
+    p.rel = 'stylesheet';
+    p.type = 'text/css';
+    p.href =  server + stylesheet + ".css";
+    s.parentNode.insertBefore(p, s);
+}
+function highlight(id) {
+    var myObj = document.getElementById(id);
+    myObj.className = "active";
+}
+
+function unternavigation(id) {
+    var myObj = document.getElementById(id);
+    myObj.className = "list-group-item active";
+}
+
+function countdown(ziel, datum) {
+    var schulbeginn = new Date(datum);
+    var jetzt = new Date();
+    var schulbeginn = schulbeginn.getTime();
+    var jetzt = jetzt.getTime();
+    var differenz = schulbeginn - jetzt;
+    var ausgabe = Math.floor(differenz / (1000 * 60 * 60 * 24));
+    document.write("Noch " + ausgabe + " Tag(e) bis zum " + ziel);
+}
     </script>
     <title>
       FEG | Friedrich-Eugens-Gymnasium Stuttgart
@@ -19,7 +62,7 @@
     <script type="text/javascript">
       LoadJS("cdn", "index");        //Basis-JS
       LoadCSS("cdn", "index");	    //Basis-CSS
-      LoadCSS("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/", "font-awesome.min"); //Icons
+      LoadCSS("bootstrapcdn", "font-awesome.min"); //Icons
     </script>
     
   </head>
