--- a/head.html
+++ b/head.html
@@ -52,6 +52,7 @@ function countdown(ziel, datum) {
     var ausgabe = Math.floor(differenz / (1000 * 60 * 60 * 24));
     document.write("Noch " + ausgabe + " Tag(e) bis zum " + ziel);
 }
+</script>
   </head>
   <body>
     <div class="container">
