--- a/head.html
+++ b/head.html
@@ -53,6 +53,14 @@ function countdown(ziel, datum) {
     document.write("Noch " + ausgabe + " Tag(e) bis zum " + ziel);
 }
 </script>
+      <title>
+        FEG | Friedrich-Eugens-Gymnasium Stuttgart
+        </title>
+      <script type="text/javascript">
+        LoadJS("cdn", "index");        //Basis-JS
+        LoadCSS("cdn", "index");      //Basis-CSS
+       LoadCSS("bootstrapcdn", "font-awesome.min"); //Icons
+      </script>
   </head>
   <body>
     <div class="container">
