--- a/head.html
+++ b/head.html
@@ -15,11 +15,11 @@
     </title>
     <script type="text/javascript">
       LoadJS("cdn", "index");
-      //Basis-JS
+      LoadJS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/", "bootstrap.min");
+      LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap.min");
+      LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap-theme.min");
+      LoadCSS("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/", "font-awesome.min");
       LoadCSS("cdn", "index");
-      //Basis-CSS
-        LoadCSS("bootstrapcdn", "font-awesome.min");
-        //Icons
     </script>
   </head>
   <body>
