--- a/head.html
+++ b/head.html
@@ -15,6 +15,7 @@
     </title>
     <script type="text/javascript">
       LoadJS("cdn", "index");
+      LoadJS("//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/", "jquery.min")
       LoadJS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/", "bootstrap.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap-theme.min");
