--- a/head.html
+++ b/head.html
@@ -19,7 +19,7 @@
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap-theme.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/", "font-awesome.min");
-      LoadCSS("cdn", "index)
+      LoadCSS("cdn", "index")
     </script>
   </head>
   <body>
