--- a/head.html
+++ b/head.html
@@ -14,12 +14,12 @@
       FEG | Friedrich-Eugens-Gymnasium Stuttgart
     </title>
     <script type="text/javascript">
+      LoadCSS("cdn", "index");
       LoadJS("//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/", "jquery.min")
       LoadJS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/", "bootstrap.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap-theme.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/", "font-awesome.min");
-      LoadCSS("cdn", "index")
     </script>
   </head>
   <body>
