--- a/head.html
+++ b/head.html
@@ -20,6 +20,7 @@
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap-theme.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/", "font-awesome.min");
       LoadJS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/", "bootstrap.min");
+      LoadCSS("//cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.11.2/css/", "blueimp-gallery.min");
     </script>
   </head>
   <body>
