--- a/head.html
+++ b/head.html
@@ -19,11 +19,9 @@
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap-theme.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/", "font-awesome.min");
       LoadCSS("//cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.11.2/css/", "blueimp-gallery.min");
+      LoadCSS("http://feg-stuttgart.github.io/css/", "index");
       LoadJS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/", "bootstrap.min");
     </script>
-    <style type=”text/css”>
-      body{padding-top:20px}.footer{border-top:1px solid #eee;margin-top:40px;padding-top:40px;padding-bottom:40px}.jumbotron{text-align:center;background-color:transparent}.jumbotron .btn{font-size:21px;padding:14px 24px}.gallery{width:245px}
-    </style>
   </head>
   <body>
     <div class="container">
