--- a/footer.html
+++ b/footer.html
@@ -22,6 +22,7 @@
     <i class="fa fa-pencil-square-o"></i>
     bearbeiten
   </a>
+  <a href="https://codeclimate.com/github/feg-stuttgart/grunt"><img src="https://codeclimate.com/github/feg-stuttgart/grunt.png" /></a>
   <p>
     &copy; Friedrich-Eugens-Gymnasium Stuttgart 2014
   </p>
