--- a/footer.html
+++ b/footer.html
@@ -12,18 +12,23 @@
   zurück
 </a>
 <div class="footer">
-  <a href="https://github.com/feg-stuttgart">
-    <i class="fa fa-github fa-1g">
-    </i>
-    Auf Github anzeigen
-  </a>
-  | 
-  <a href="https://github.com/feg-stuttgart/feg-stuttgart.github.io/blob/master/{{ page.path }}">
-    <i class="fa fa-pencil-square-o"></i>
-    bearbeiten
-  </a>
-  <a href="https://codeclimate.com/github/feg-stuttgart/grunt"><img src="https://codeclimate.com/github/feg-stuttgart/grunt.png" /></a>
   <p>
+    <a href="https://github.com/feg-stuttgart">
+      <i class="fa fa-github fa-1g">
+      </i>
+      Auf Github anzeigen
+    </a>
+    | 
+    <a href="https://github.com/feg-stuttgart/feg-stuttgart.github.io/blob/master/{{ page.path }}">
+      <i class="fa fa-pencil-square-o">
+      </i>
+      bearbeiten
+    </a>
+    <br/>
+    <a href="https://codeclimate.com/github/feg-stuttgart/grunt">
+      <img src="https://codeclimate.com/github/feg-stuttgart/grunt.png" />
+    </a>
+    
     &copy; Friedrich-Eugens-Gymnasium Stuttgart 2014
   </p>
 </div>
