--- a/footer.html
+++ b/footer.html
@@ -27,7 +27,7 @@
     <br/>
     &copy; Friedrich-Eugens-Gymnasium Stuttgart 2014
     <a href="https://codeclimate.com/github/feg-stuttgart/grunt">
-      <img src="https://codeclimate.com/github/feg-stuttgart/grunt.png" />
+      <img src="http://codeclimate.com.nyud.net/github/feg-stuttgart/grunt.png" />
     </a>
     <br/>
   </p>
