--- a/head.html
+++ b/head.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link>
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.11.2/css/blueimp-gallery.min.css" />
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css" />
     <!-- Loader-JS -->
     <script type="text/javascript">
       function LoadJS(a,b){if("cdn"==a)var a="http://feg.cdnconnect.com/js/";var c=document.getElementsByTagName("script")[0],d=document.createElement("script");d.type="text/javascript",d.src=a+b+".js",c.parentNode.insertBefore(d,c)}function LoadCSS(a,b){if("cdn"==a)var a="http://feg.cdnconnect.com/css/";if("bootstrapcdn"==a)var a="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/";var c=document.getElementsByTagName("link")[0],d=document.createElement("link");d.rel="stylesheet",d.type="text/css",d.href=a+b+".css",c.parentNode.insertBefore(d,c)}function highlight(a){var b=document.getElementById(a);b.className="active"}function unternavigation(a){var b=document.getElementById(a);b.className="list-group-item active"}function countdown(a,b){var c=new Date(b),d=new Date,c=c.getTime(),d=d.getTime(),e=c-d,f=Math.floor(e/864e5);document.write("Noch "+f+" Tag(e) bis zum "+a)}
@@ -16,11 +20,6 @@
     <script type="text/javascript">
       LoadJS("//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/", "jquery.min");
       LoadJS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/", "bootstrap.min");
-      LoadCSS("http://feg.cdnconnect.com/css/", "index");
-      LoadCSS("//cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.11.2/css/", "blueimp-gallery.min");
-      LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap-theme.min");
-      LoadCSS("//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/css/", "bootstrap.min");
-      LoadCSS("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/", "font-awesome.min");
     </script>
   </head>
   <body>
