--- a/head.html
+++ b/head.html
@@ -19,7 +19,7 @@
     <script type="text/javascript">
       function LoadJS(a,b){if("cdn"==a)var a="http://feg.cdnconnect.com/js/";var c=document.getElementsByTagName("script")[0],d=document.createElement("script");d.type="text/javascript",d.src=a+b+".js",d.async="async",c.parentNode.insertBefore(d,c)}function LoadCSS(a,b){if("cdn"==a)var a="http://feg.cdnconnect.com/css/";if("bootstrapcdn"==a)var a="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/";var c=document.getElementsByTagName("link")[0],d=document.createElement("link");d.rel="stylesheet",d.type="text/css",d.href=a+b+".css",c.parentNode.insertBefore(d,c)}function highlight(a){var b=document.getElementById(a);b.className="active"}function unternavigation(a){var b=document.getElementById(a);b.className="list-group-item active"}function countdown(a,b){var c=new Date(b),d=new Date,c=c.getTime(),d=d.getTime(),e=c-d,f=Math.floor(e/864e5);document.write("Noch "+f+" Tag(e) bis zum "+a)}
     </script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js" async>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js">
     </script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.3/js/bootstrap.min.js">
     </script>
