--- a/head.html
+++ b/head.html
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="navbar navbar-inverse">
         <div class="container">
-          <div class="navbar-header">
+          <div class="navbar-header" name="nachoben">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="sr-only">
                 Toggle navigation
