--- a/head.html
+++ b/head.html
@@ -25,10 +25,11 @@
     </title>
   </head>
   <body>
+  <a name="nachoben"></a>
     <div class="container">
       <div class="navbar navbar-inverse">
         <div class="container">
-          <div class="navbar-header" name="nachoben">
+          <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="sr-only">
                 Toggle navigation
