--- a/head.html
+++ b/head.html
@@ -25,7 +25,7 @@
     </title>
   </head>
   <body>
-  <a name="nachoben"></a>
+  <a id="nachoben"></a>
     <div class="container">
       <div class="navbar navbar-inverse">
         <div class="container">
