--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@
       bearbeiten
     </a>
     <br/>
-    &copy; Friedrich-Eugens-Gymnasium Stuttgart 2014
+    &copy; Friedrich-Eugens-Gymnasium Stuttgart {{ page.date }}
   </p>
 </div>
 </div>
