--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,9 @@
       bearbeiten
     </a>
     <br/>
-    &copy; Friedrich-Eugens-Gymnasium Stuttgart {{ site.time }}
+    &copy; Friedrich-Eugens-Gymnasium Stuttgart
+    <br />
+    {{ site.time }}
   </p>
 </div>
 </div>
