--- a/footer.html
+++ b/footer.html
@@ -25,7 +25,7 @@
       bearbeiten
     </a>
     <br/>
-    &copy; Friedrich-Eugens-Gymnasium Stuttgart
+    &copy; Friedrich-Eugens-Gymnasium Stuttgart 2014
     <br />
     {{ site.time }}
   </p>
