--- a/footer.html
+++ b/footer.html
@@ -27,7 +27,7 @@
     <br/>
     &copy; Friedrich-Eugens-Gymnasium Stuttgart 2014
     <br />
-    {{ site.time }}
+    {{ site.time | date_to_string }}
   </p>
 </div>
 </div>
