--- a/footer.html
+++ b/footer.html
@@ -25,9 +25,7 @@
       bearbeiten
     </a>
     <br/>
-    &copy; Friedrich-Eugens-Gymnasium Stuttgart 2014
-    <br />
-    {{ site.time | date_to_string }}
+    &copy; Friedrich-Eugens-Gymnasium Stuttgart {{ site.time | date_to_string }}
   </p>
 </div>
 </div>
