--- a/footer.html
+++ b/footer.html
@@ -27,6 +27,9 @@
     <br/>
     &copy; Friedrich-Eugens-Gymnasium Stuttgart {{ site.time | date_to_string }}
   </p>
+  <form>
+    <input type="text" id="st-search-input" class="st-search-input" />
+</form>
 </div>
 </div>
 <!-- ./Inhalt -->
