--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
 </a>
 <div class="footer">
   <p>
-    <a href="https://github.com/feg-stuttgart">
+    <a href="https://github.com/feg-stuttgart/feg-stuttgart.github.io">
       <i class="fa fa-github fa-1g">
       </i>
       Auf Github anzeigen
