--- a/sidebar/Portrait.html
+++ b/sidebar/Portrait.html
@@ -5,7 +5,7 @@
   Kollegium
 </a>
 <a href="/Portrait/Selbstverstaendnis/" class="list-group-item" id="Selbstverstaendnis">
-  Selbstverstaendnis
+  Selbstverständnis
 </a>
 <a href="/Portrait/Unterrichtsprofil/" class="list-group-item" id="Unterrichtsprofil">
   Unterrichtsprofil
